--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Alexey Vasin
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: AMZN, ex-MSFT, ex-JetBrains
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://bakerbloch.files.wordpress.com/2015/09/skilletz.png
 
 #
 # Flags below are optional
